--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "busboy": "^1.6.0",
     "express": "^4.18.1",
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^11.0.0",
+    "uuid-v4": "^0.1.0"
   }
 }
